# synapse-hyperplane

./: .gitignore  CONTRIBUTING.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.history/: Cargo_20260531170501.toml  Cargo_20260531214822.toml  README_20260531172705.md  README_20260531204315.md
.history/crates/account-file-mapper/src/: account_parser_20260531204148.rs  appendvec_compat_20260531204148.rs  appendvec_compat_20260531204224.rs  appendvec_compat_20260531204241.rs  appendvec_compat_20260531204329.rs  appendvec_compat_20260531204334.rs  appendvec_compat_20260531204343.rs  scanner_20260531204159.rs  scanner_20260531204204.rs
.history/crates/base-locator/src/: lib_20260531191212.rs  lib_20260531194119.rs  lib_20260531203832.rs  lib_20260531211019.rs  lib_20260531211307.rs  lib_20260531211708.rs  lib_20260531212647.rs  lib_20260531213049.rs  lib_20260531213544.rs  lib_20260531214011.rs  lib_20260531214443.rs  lib_20260531214715.rs  pubkey_dict_rocksdb_20260531215406.rs  rocks_locator_20260531194119.rs  rocks_locator_20260531203633.rs  rocks_locator_20260531203756.rs  rocks_locator_20260531203838.rs  rocks_locator_20260602145137.rs  rocks_locator_20260602145410.rs  rocks_locator_20260602145734.rs  rocks_locator_20260603085406.rs  rocks_locator_20260603085411.rs  rocksdb_impl_20260531202912.rs  rocksdb_impl_20260531202929.rs  rocksdb_impl_20260531203647.rs  rocksdb_impl_20260531211307.rs  rocksdb_impl_20260531211414.rs  rocksdb_impl_20260531211655.rs  rocksdb_impl_20260602124256.rs  rocksdb_impl_20260602125531.rs  rocksdb_impl_20260602125900.rs  rocksdb_impl_20260602130240.rs  rocksdb_impl_20260602130307.rs  rocksdb_impl_20260602130334.rs  rocksdb_impl_20260602130928.rs  rocksdb_impl_20260602132357.rs  rocksdb_impl_20260602134640.rs  rocksdb_impl_20260602145754.rs
.history/crates/cache-plane/src/: encoded_cache_20260531204529.rs  l1_20260531204529.rs  l1_20260531204929.rs
.history/crates/delta-plane/src/: compactor_20260531204311.rs  compactor_20260531204415.rs  compactor_20260531205206.rs  compactor_20260531205319.rs  compactor_20260531205403.rs  compactor_20260531211708.rs  compactor_20260531212021.rs  compactor_20260531212108.rs  compactor_20260531212238.rs  compactor_20260531212515.rs  delta_consumer_20260531204232.rs  delta_locator_20260531204311.rs  delta_locator_20260531204439.rs  delta_locator_20260531205220.rs  delta_locator_20260531205311.rs  delta_locator_20260531205412.rs  delta_locator_20260531205450.rs  delta_locator_20260531205453.rs  delta_locator_20260531205500.rs  segment_writer_20260531205319.rs
.history/crates/geyser-bridge/src/: ring_buffer_20260531204311.rs  ring_buffer_20260531204758.rs
.history/crates/index-fabric/src/: adaptive_index_20260531204323.rs  adaptive_index_20260531205206.rs  adaptive_index_20260531205220.rs  adaptive_index_20260531205412.rs  bitmap_store_20260531204650.rs  data_size_index_20260531204600.rs  discriminator_index_20260531204650.rs  lsm_bitmap_20260531204323.rs  memcmp_accelerator_20260531204706.rs  memcmp_index_20260531204600.rs  numa_fabric_20260531204325.rs  program_index_20260531204650.rs  query_cache_20260531204323.rs  query_cache_20260531204758.rs  shared_memory_20260531204323.rs  shared_memory_20260531205206.rs  tiered_dictionary_20260531204758.rs  token_mint_index_20260531204650.rs  token_owner_index_20260531204600.rs
.history/crates/query-orchestrator/src/: bitmap_intersection_20260531204529.rs  pagination_20260531204354.rs  query_planner_20260531204354.rs
.history/crates/rpc-read-provider/src/: methods_20260531204354.rs  methods_20260531205206.rs  (+3 more)
benches/: bench_cost_model.rs  bench_lsm_hotcold.rs
configs/: production.toml
crates/account-file-mapper/: Cargo.toml
crates/account-file-mapper/src/: account_parser.rs  appendvec_compat.rs  lib.rs  mmap_reader.rs  scanner.rs
crates/base-locator/: Cargo.toml
crates/base-locator/src/: checksum.rs  lib.rs  pubkey_dict.rs  pubkey_dict_redb.rs  pubkey_dict_rocksdb.rs  redb_impl.rs  rocksdb_impl.rs
crates/cache-plane/: Cargo.toml
crates/cache-plane/src/: dragonfly.rs  encoded_cache.rs  invalidation.rs  l1.rs  lib.rs
crates/control-plane/: Cargo.toml
crates/control-plane/src/: admin.rs  health.rs  lib.rs  metrics.rs
crates/delta-plane/: Cargo.toml
crates/delta-plane/src/: compactor.rs  delta_consumer.rs  delta_locator.rs  lib.rs  segment_writer.rs  update_reducer.rs
crates/geyser-bridge/: Cargo.toml
crates/geyser-bridge/src/: lib.rs  ring_buffer.rs
crates/hyperplane-types/: Cargo.toml
crates/hyperplane-types/src/: account.rs  bitmap.rs  lib.rs  location.rs  rpc.rs  slot.rs
crates/index-fabric/: Cargo.toml
crates/index-fabric/src/: adaptive_index.rs  bitmap_store.rs  data_size_index.rs  discriminator_index.rs  hot_cold_index.rs  lib.rs  lsm_bitmap.rs  memcmp_accelerator.rs  memcmp_index.rs  numa_fabric.rs  program_index.rs  query_cache.rs  shared_memory.rs  simd_bitmap.rs  tiered_dictionary.rs  token_mint_index.rs  token_owner_index.rs
crates/query-orchestrator/: Cargo.toml
crates/query-orchestrator/src/: bitmap_intersection.rs  cost_estimator.rs  cost_model.rs  lib.rs  pagination.rs  query_planner.rs  types.rs
crates/rpc-read-provider/: Cargo.toml
crates/rpc-read-provider/src/: lib.rs  methods.rs  middleware.rs  server.rs
crates/slot-reconciler/: Cargo.toml
crates/slot-reconciler/src/: commitments.rs  lib.rs  rollback.rs  roots.rs  watermarks.rs
crates/synapse-hyper-cli/: Cargo.toml  README.md  USAGE.md
crates/synapse-hyper-cli/src/: app.rs  config.rs  main.rs  runner.rs  ui.rs
crates/synapse-hyperplane/: Cargo.toml
crates/synapse-hyperplane/src/: index_manager.rs  lib.rs  runtime.rs
docs/: ARCHITETTURA_COMPLETA.md  BUILD_CONFIG.md  GITHUB_SETUP.md  README.md  VPS_DEPLOYMENT.md
docs/benchmarks/: README.md
docs/deployment/: DEPLOY_CHECKLIST.md  README.md  VPS_DEPLOYMENT_GUIDE.md
scripts/: generate_test_accounts.py  vps-production-tests.sh
tests/: integration_cost_model.rs  integration_lsm_hotcold.rs  integration_shared_numa_cache.rs
(+8 files in other folders)
