[package]
name = "cache-plane"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "L1 hot cache + DragonflyDB integration for encoded responses"

[dependencies]
hyperplane-types.workspace = true
solana-sdk.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
tracing.workspace = true
metrics.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

# DragonflyDB/Redis client
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
tokio.workspace = true

[dev-dependencies]
criterion.workspace = true
