[package]
name = "control-plane"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Metrics, health checks, and admin API"

[dependencies]
hyperplane-types.workspace = true
tokio.workspace = true
tracing.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
