[package]
name = "index-fabric"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Compressed bitmap indexes (RoaringBitmap) for account queries"

[dependencies]
hyperplane-types.workspace = true
solana-sdk.workspace = true
roaring.workspace = true
rocksdb = { version = "0.23", features = ["snappy", "lz4", "zstd", "zlib"], optional = true }
tokio.workspace = true
tracing.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
sha2.workspace = true
memmap2 = "0.9"
num_cpus = "1.16"
