[package]
name = "rpc-read-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RPC read provider mesh for Synapse Hyperplane"

[dependencies]
hyperplane-types.workspace = true
account-file-mapper.workspace = true
base-locator.workspace = true
cache-plane.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes.workspace = true
solana-sdk.workspace = true

[dev-dependencies]
criterion.workspace = true
