[package]
name = "slot-reconciler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Slot tracking and commitment reconciliation"

[dependencies]
hyperplane-types.workspace = true
solana-sdk.workspace = true
tokio.workspace = true
tracing.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
