[package]
name = "synapse-hyper-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "synapse-hyper"
path = "src/main.rs"

[dependencies]
# Workspace crates
index-fabric = { path = "../index-fabric" }
query-orchestrator = { path = "../query-orchestrator" }

# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = "0.4"
unicode-width = "0.2"
